# qngemargent

backend/: pyproject.toml
frontend/: package-lock.json
